fix z-index on fb-quote

--- a/inc/css/editor-style.css
+++ b/inc/css/editor-style.css
@@ -327,6 +327,10 @@ small {
       .entry-full.content
              
 ------------------------------- */
+.fb-quote {
+  z-index: 1;
+}
+
 .entry-full-content p,
 .entry-full-content div,
 .entry-full-content img,
